changes made for using hdp 2.6.5

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -48,7 +48,7 @@ kylin.storage.url=hbase
 # Working folder in HDFS, make sure user has the right access to the hdfs directory
 kylin.env.hdfs-working-dir=/kylin
 
-kylin.env.zookeeper-connect-string=sandbox.hortonworks.com
+kylin.env.zookeeper-connect-string=sandbox-hdp.hortonworks.com
 
 # HBase Cluster FileSystem, which serving hbase, format as hdfs://hbase-cluster:8020
 # Leave empty if hbase running on same cluster with hive and mapreduce
@@ -194,9 +194,9 @@ kylin.engine.spark-conf.spark.executor.memory=768M
 kylin.engine.spark-conf.spark.executor.cores=1
 kylin.engine.spark-conf.spark.executor.instances=1
 kylin.engine.spark-conf.spark.eventLog.enabled=true
-kylin.engine.spark-conf.spark.history.fs.logDirectory=hdfs\:///spark-history
-kylin.engine.spark-conf.spark.eventLog.dir=hdfs\:///spark-history
-#kylin.engine.spark-conf.spark.yarn.archive=hdfs://sandbox.hortonworks.com:8020/kylin/spark/spark-libs.jar
+kylin.engine.spark-conf.spark.history.fs.logDirectory=hdfs\:///spark2-history
+kylin.engine.spark-conf.spark.eventLog.dir=hdfs\:///spark2-history
+#kylin.engine.spark-conf.spark.yarn.archive=hdfs://sandbox-hdp.hortonworks.com:8020/kylin/spark/spark-libs.jar
 kylin.engine.spark-conf.spark.driver.extraJavaOptions=-Dhdp.version=current
 kylin.engine.spark-conf.spark.yarn.am.extraJavaOptions=-Dhdp.version=current
 kylin.engine.spark-conf.spark.executor.extraJavaOptions=-Dhdp.version=current
