--- a/server/pom.xml
+++ b/server/pom.xml
@@ -32,7 +32,11 @@
     </parent>
 
     <dependencies>
-
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.kylin</groupId>
             <artifactId>kylin-server-base</artifactId>
